--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Dinosaurs</h1>
 
   <nav>
-    <ul>
+    <ol class="list-group">
       <li>
         <i class="icon i-64"> <img src="images/ankylosaurus.svg" alt="">
         </i>
@@ -36,7 +36,8 @@
         <span class="icon-label">Triceratops</span>
       </li>
 
+    </ol>
+  </nav>
 
-
-    </body>
-    </html>
+</body>
+</html>
